--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,11 @@ Authors@R:
            email = "liuwd15@tsinghua.org.cn",
 		   comment = c(ORCID = "0000-0002-5124-9338"))
 Description: This package provides many easy-to-use methods to analyze and 
-	visualize tomo-seq data.
-Depends: R (>= 3.5.0)
+	visualize tomo-seq data. The main purpose of the package it to find zones
+	with similar transcriptional profiles and spatially expressed genes in a 
+	tomo-seq sample. Several visulization functions create easy-to-modify plots
+	are available to help users do this.
+Depends: R (>= 4.0.0)
 Imports:
 	methods,
 	stats,
@@ -33,9 +36,9 @@ Suggests:
 URL: https://github.com/liuwd15/tomoda
 BugReports: https://github.com/liuwd15/tomoda/issues
 biocViews: 
-	Gene Expression, 
+	GeneExpression, 
 	Sequencing,
-	RNAseq, 
+	RNASeq, 
 	Transcriptomics,
 	Clustering, 
 	Visualization
