--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,6 @@
 
 export(corHeatmap)
 export(createTomo)
-export(createTomo.SummarizedExperiment)
-export(createTomo.matrix)
 export(embedPlot)
 export(expHeatmap)
 export(findPeak)
@@ -18,6 +16,8 @@ export(runPCA)
 export(runTSNE)
 export(runUMAP)
 export(scaleTomo)
+export(tomoMatrix)
+export(tomoSummarizedExperiment)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(Rtsne,Rtsne)
 importFrom(SummarizedExperiment,"assay<-")
